--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,25 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		<jdk.attach.allowAttachSelf>true</jdk.attach.allowAttachSelf>
+		<TOMEE_VERSION>8.0.13</TOMEE_VERSION>
 	</properties>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>1.6.0.Final</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
-			<groupId>javax</groupId>
+			<groupId>org.apache.tomee</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>8.0</version>
+			<version>8.0-6</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Tests -->
@@ -24,14 +36,18 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.11.0</version>
+			<!-- <version>4.11.0</version> -->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	<build>		
+	<build>
 		<finalName>carman</finalName>
 		<pluginManagement>
 			<plugins>
@@ -59,10 +75,76 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-			</testResource>
-		</testResources>
 	</build>
+	<profiles>
+		<profile>
+			<id>tomee-embedded</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>			
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>arquillian-tomee-embedded</artifactId>
+					<version>${TOMEE_VERSION}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>tomee-embedded</artifactId>
+					<version>${TOMEE_VERSION}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>tomee-webservices</artifactId>
+					<version>${TOMEE_VERSION}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>tomee-jaxrs</artifactId>
+					<version>${TOMEE_VERSION}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>tomee-remote</id>
+			<properties>
+				<tomee.version>${TOMEE_VERSION}</tomee.version>
+				<tomee.classifier>plume</tomee.classifier>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<systemPropertyVariables>
+								<tomee.classifier>${tomee.classifier}</tomee.classifier>
+								<tomee.version>${tomee.version}</tomee.version>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>arquillian-tomee-remote</artifactId>
+					<version>${tomee.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.tomee</groupId>
+					<artifactId>apache-tomee</artifactId>
+					<version>${tomee.version}</version>
+					<classifier>${tomee.classifier}</classifier>
+					<scope>test</scope>
+					<type>zip</type>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
