--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<systemPropertyVariables>
+							<tomee.httpPort>-1</tomee.httpPort>
+							<tomee.stopPort>-1</tomee.stopPort>
+						</systemPropertyVariables>
+					</configuration>
 					<version>2.22.2</version>
 				</plugin>
 				<plugin>
@@ -81,7 +87,7 @@
 			<id>tomee-embedded</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>			
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.tomee</groupId>
@@ -122,6 +128,8 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
 							<systemPropertyVariables>
+								<tomee.httpPort>-1</tomee.httpPort>
+								<tomee.stopPort>-1</tomee.stopPort>
 								<tomee.classifier>${tomee.classifier}</tomee.classifier>
 								<tomee.version>${tomee.version}</tomee.version>
 							</systemPropertyVariables>
