Start of persistence section. Exploring more.

--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,28 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<!-- <version>4.11.0</version> -->
 			<scope>test</scope>
 		</dependency>
+		<!-- dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<version>10.16.1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbytools</artifactId>
+			<version>10.16.1.1</version>
+			<scope>test</scope>
+		</dependency -->
 	</dependencies>
 	<build>
 		<finalName>carman</finalName>
